parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEF
    SAG_KOSELI_PARANTEZ
    SOL_KOSELI_PARANTEZ

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     program -> empty
Rule 3     statement_list -> statement_list statement
Rule 4     statement_list -> statement
Rule 5     statement -> var_decl
Rule 6     statement -> func_decl
Rule 7     statement -> assignment_stmt
Rule 8     statement -> if_stmt
Rule 9     statement -> while_stmt
Rule 10    statement -> for_stmt
Rule 11    statement -> return_stmt
Rule 12    statement -> expr_stmt
Rule 13    statement -> blok
Rule 14    blok -> SOL_SUSLU_PARANTEZ statement_list SAG_SUSLU_PARANTEZ
Rule 15    blok -> SOL_SUSLU_PARANTEZ SAG_SUSLU_PARANTEZ
Rule 16    tip -> TIP_INT
Rule 17    tip -> TIP_FLOAT
Rule 18    tip -> TIP_BOOL
Rule 19    tip -> TIP_VOID
Rule 20    tip -> TIP_STRING
Rule 21    var_decl -> tip TANIMLAYICI ATAMA expression NOKTALI_VIRGUL
Rule 22    var_decl -> tip TANIMLAYICI NOKTALI_VIRGUL
Rule 23    func_decl -> tip TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
Rule 24    func_decl -> TIP_VOID TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
Rule 25    param_list -> param_list VIRGUL param
Rule 26    param_list -> param
Rule 27    param_list -> empty
Rule 28    param -> tip TANIMLAYICI
Rule 29    if_stmt -> IF SOL_PARANTEZ expression SAG_PARANTEZ blok
Rule 30    if_stmt -> IF SOL_PARANTEZ expression SAG_PARANTEZ blok ELSE blok
Rule 31    while_stmt -> WHILE SOL_PARANTEZ expression SAG_PARANTEZ blok
Rule 32    for_init -> var_decl
Rule 33    for_init -> assignment_stmt
Rule 34    for_stmt -> FOR SOL_PARANTEZ for_init expression NOKTALI_VIRGUL assignment SAG_PARANTEZ blok
Rule 35    return_stmt -> RETURN expression NOKTALI_VIRGUL
Rule 36    assignment_stmt -> assignment NOKTALI_VIRGUL
Rule 37    assignment -> TANIMLAYICI ATAMA expression
Rule 38    expr_stmt -> expression NOKTALI_VIRGUL
Rule 39    expression -> expression TOPLA expression
Rule 40    expression -> expression CIKAR expression
Rule 41    expression -> expression CARP expression
Rule 42    expression -> expression BOL expression
Rule 43    expression -> expression MODUL expression
Rule 44    expression -> expression ESIT expression
Rule 45    expression -> expression ESIT_DEGIL expression
Rule 46    expression -> expression KUCUK expression
Rule 47    expression -> expression BUYUK expression
Rule 48    expression -> expression KUCUK_ESIT expression
Rule 49    expression -> expression BUYUK_ESIT expression
Rule 50    expression -> expression VE expression
Rule 51    expression -> expression VEYA expression
Rule 52    expression -> CIKAR expression
Rule 53    expression -> DEGIL expression
Rule 54    expression -> SOL_PARANTEZ expression SAG_PARANTEZ
Rule 55    expression -> TANIMLAYICI SOL_PARANTEZ arg_list SAG_PARANTEZ
Rule 56    arg_list -> arg_list VIRGUL expression
Rule 57    arg_list -> expression
Rule 58    arg_list -> empty
Rule 59    expression -> TAMSAYI
Rule 60    expression -> ONDALIKLI
Rule 61    expression -> DOGRU
Rule 62    expression -> YANLIS
Rule 63    expression -> STRING
Rule 64    expression -> TANIMLAYICI
Rule 65    empty -> <empty>

Terminals, with rules where they appear

ATAMA                : 21 37
BOL                  : 42
BUYUK                : 47
BUYUK_ESIT           : 49
CARP                 : 41
CIKAR                : 40 52
DEF                  : 
DEGIL                : 53
DOGRU                : 61
ELSE                 : 30
ESIT                 : 44
ESIT_DEGIL           : 45
FOR                  : 34
IF                   : 29 30
KUCUK                : 46
KUCUK_ESIT           : 48
MODUL                : 43
NOKTALI_VIRGUL       : 21 22 34 35 36 38
ONDALIKLI            : 60
RETURN               : 35
SAG_KOSELI_PARANTEZ  : 
SAG_PARANTEZ         : 23 24 29 30 31 34 54 55
SAG_SUSLU_PARANTEZ   : 14 15
SOL_KOSELI_PARANTEZ  : 
SOL_PARANTEZ         : 23 24 29 30 31 34 54 55
SOL_SUSLU_PARANTEZ   : 14 15
STRING               : 63
TAMSAYI              : 59
TANIMLAYICI          : 21 22 23 24 28 37 55 64
TIP_BOOL             : 18
TIP_FLOAT            : 17
TIP_INT              : 16
TIP_STRING           : 20
TIP_VOID             : 19 24
TOPLA                : 39
VE                   : 50
VEYA                 : 51
VIRGUL               : 25 56
WHILE                : 31
YANLIS               : 62
error                : 

Nonterminals, with rules where they appear

arg_list             : 55 56
assignment           : 34 36
assignment_stmt      : 7 33
blok                 : 13 23 24 29 30 30 31 34
empty                : 2 27 58
expr_stmt            : 12
expression           : 21 29 30 31 34 35 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 54 56 57
for_init             : 34
for_stmt             : 10
func_decl            : 6
if_stmt              : 8
param                : 25 26
param_list           : 23 24 25
program              : 0
return_stmt          : 11
statement            : 3 4
statement_list       : 1 3 14
tip                  : 21 22 23 28
var_decl             : 5 32
while_stmt           : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) program -> . empty
    (3) statement_list -> . statement_list statement
    (4) statement_list -> . statement
    (65) empty -> .
    (5) statement -> . var_decl
    (6) statement -> . func_decl
    (7) statement -> . assignment_stmt
    (8) statement -> . if_stmt
    (9) statement -> . while_stmt
    (10) statement -> . for_stmt
    (11) statement -> . return_stmt
    (12) statement -> . expr_stmt
    (13) statement -> . blok
    (21) var_decl -> . tip TANIMLAYICI ATAMA expression NOKTALI_VIRGUL
    (22) var_decl -> . tip TANIMLAYICI NOKTALI_VIRGUL
    (23) func_decl -> . tip TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
    (24) func_decl -> . TIP_VOID TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
    (36) assignment_stmt -> . assignment NOKTALI_VIRGUL
    (29) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok
    (30) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok ELSE blok
    (31) while_stmt -> . WHILE SOL_PARANTEZ expression SAG_PARANTEZ blok
    (34) for_stmt -> . FOR SOL_PARANTEZ for_init expression NOKTALI_VIRGUL assignment SAG_PARANTEZ blok
    (35) return_stmt -> . RETURN expression NOKTALI_VIRGUL
    (38) expr_stmt -> . expression NOKTALI_VIRGUL
    (14) blok -> . SOL_SUSLU_PARANTEZ statement_list SAG_SUSLU_PARANTEZ
    (15) blok -> . SOL_SUSLU_PARANTEZ SAG_SUSLU_PARANTEZ
    (16) tip -> . TIP_INT
    (17) tip -> . TIP_FLOAT
    (18) tip -> . TIP_BOOL
    (19) tip -> . TIP_VOID
    (20) tip -> . TIP_STRING
    (37) assignment -> . TANIMLAYICI ATAMA expression
    (39) expression -> . expression TOPLA expression
    (40) expression -> . expression CIKAR expression
    (41) expression -> . expression CARP expression
    (42) expression -> . expression BOL expression
    (43) expression -> . expression MODUL expression
    (44) expression -> . expression ESIT expression
    (45) expression -> . expression ESIT_DEGIL expression
    (46) expression -> . expression KUCUK expression
    (47) expression -> . expression BUYUK expression
    (48) expression -> . expression KUCUK_ESIT expression
    (49) expression -> . expression BUYUK_ESIT expression
    (50) expression -> . expression VE expression
    (51) expression -> . expression VEYA expression
    (52) expression -> . CIKAR expression
    (53) expression -> . DEGIL expression
    (54) expression -> . SOL_PARANTEZ expression SAG_PARANTEZ
    (55) expression -> . TANIMLAYICI SOL_PARANTEZ arg_list SAG_PARANTEZ
    (59) expression -> . TAMSAYI
    (60) expression -> . ONDALIKLI
    (61) expression -> . DOGRU
    (62) expression -> . YANLIS
    (63) expression -> . STRING
    (64) expression -> . TANIMLAYICI

    $end            reduce using rule 65 (empty -> .)
    TIP_VOID        shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    RETURN          shift and go to state 23
    SOL_SUSLU_PARANTEZ shift and go to state 24
    TIP_INT         shift and go to state 25
    TIP_FLOAT       shift and go to state 26
    TIP_BOOL        shift and go to state 27
    TIP_STRING      shift and go to state 28
    TANIMLAYICI     shift and go to state 15
    CIKAR           shift and go to state 29
    DEGIL           shift and go to state 30
    SOL_PARANTEZ    shift and go to state 17
    TAMSAYI         shift and go to state 31
    ONDALIKLI       shift and go to state 32
    DOGRU           shift and go to state 33
    YANLIS          shift and go to state 34
    STRING          shift and go to state 35

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    var_decl                       shift and go to state 5
    func_decl                      shift and go to state 6
    assignment_stmt                shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10
    return_stmt                    shift and go to state 11
    expr_stmt                      shift and go to state 12
    blok                           shift and go to state 13
    tip                            shift and go to state 14
    expression                     shift and go to state 16
    assignment                     shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (5) statement -> . var_decl
    (6) statement -> . func_decl
    (7) statement -> . assignment_stmt
    (8) statement -> . if_stmt
    (9) statement -> . while_stmt
    (10) statement -> . for_stmt
    (11) statement -> . return_stmt
    (12) statement -> . expr_stmt
    (13) statement -> . blok
    (21) var_decl -> . tip TANIMLAYICI ATAMA expression NOKTALI_VIRGUL
    (22) var_decl -> . tip TANIMLAYICI NOKTALI_VIRGUL
    (23) func_decl -> . tip TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
    (24) func_decl -> . TIP_VOID TANIMLAYICI SOL_PARANTEZ param_list SAG_PARANTEZ blok
    (36) assignment_stmt -> . assignment NOKTALI_VIRGUL
    (29) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok
    (30) if_stmt -> . IF SOL_PARANTEZ expression SAG_PARANTEZ blok ELSE blok
    (31) while_stmt -> . WHILE SOL_PARANTEZ expression SAG_PARANTEZ blok
    (34) for_stmt -> . FOR SOL_PARANTEZ for_init expression NOKTALI_VIRGUL assignment SAG_PARANTEZ blok
    (35) return_stmt -> . RETURN expression NOKTALI_VIRGUL
    (38) expr_stmt -> . expression NOKTALI_VIRGUL
    (14) blok -> . SOL_SUSLU_PARANTEZ statement_list SAG_SUSLU_PARANTEZ
    (15) blok -> . SOL_SUSLU_PARANTEZ SAG_SUSLU_PARANTEZ
    (16) tip -> . TIP_INT
    (17) tip -> . TIP_FLOAT
    (18) tip -> . TIP_BOOL
    (19) tip -> . TIP_VOID
    (20) tip -> . TIP_STRING
    (37) assignment -> . TANIMLAYICI ATAMA expression
    (39) expression -> . expression TOPLA expression
    (40) expression -> . expression CIKAR expression
    (41) expression -> . expression CARP expression
    (42) expression -> . expression BOL expression
    (43) expression -> . expression MODUL expression
    (44) expression -> . expression ESIT expression
    (45) expression -> . expression ESIT_DEGIL expression
    (46) expression -> . expression KUCUK expression
    (47) expression -> . expression BUYUK expression
    (48) expression -> . expression KUCUK_ESIT expression
    (49) expression -> . expression BUYUK_ESIT expression
    (50) expression -> . expression VE expression
    (51) expression -> . expression VEYA expression
    (52) expression -> . CIKAR expression
    (53) expression -> . DEGIL expression
    (54) expression -> . SOL_PARANTEZ expression SAG_PARANTEZ
    (55) expression -> . TANIMLAYICI SOL_PARANTEZ arg_list SAG_PARANTEZ
    (59) expression -> . TAMSAYI
    (60) expression -> . ONDALIKLI
    (61) expression -> . DOGRU
    (62) expression -> . YANLIS
    (63) expression -> . STRING
    (64) expression -> . TANIMLAYICI

    $end            reduce using rule 1 (program -> statement_list .)
    TIP_VOID        shift and go to state 18
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22
    RETURN          shift and go to state 23
    SOL_SUSLU_PARANTEZ shift and go to state 24
    TIP_INT         shift and go to state 25
    TIP_FLOAT       shift and go to state 26
    TIP_BOOL        shift and go to state 27
    TIP_STRING      shift and go to state 28
    TANIMLAYICI     shift and go to state 15
    CIKAR           shift and go to state 29
    DEGIL           shift and go to state 30
    SOL_PARANTEZ    shift and go to state 17
    TAMSAYI         shift and go to state 31
    ONDALIKLI       shift and go to state 32
    DOGRU           shift and go to state 33
    YANLIS          shift and go to state 34
    STRING          shift and go to state 35

    statement                      shift and go to state 36
    var_decl                       shift and go to state 5
    func_decl                      shift and go to state 6
    assignment_stmt                shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    for_stmt                       shift and go to state 10
    return_stmt                    shift and go to state 11
    expr_stmt                      shift and go to state 12
    blok                           shift and go to state 13
    tip                            shift and go to state 14
    expression                     shift and go to state 16
    assignment                     shift and go to state 19

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (4) statement_list -> statement .

    TIP_VOID        reduce using rule 4 (statement_list -> statement .)
    IF              reduce using rule 4 (statement_list -> statement .)
    WHILE           reduce using rule 4 (statement_list -> statement .)
    FOR             reduce using rule 4 (statement_list -> statement .)
    RETURN          reduce using rule 4 (statement_list -> statement .)
    SOL_SUSLU_PARANTEZ reduce using rule 4 (statement_list -> statement .)
    TIP_INT         reduce using rule 4 (statement_list -> statement .)
    TIP_FLOAT       reduce using rule 4 (statement_list -> statement .)
    TIP_BOOL        reduce using rule 4 (statement_list -> statement .)
    TIP_STRING      reduce using rule 4 (statement_list -> statement .)
    TANIMLAYICI     reduce using rule 4 (statement_list -> statement .)
    CIKAR           reduce using rule 4 (statement_list -> statement .)
    DEGIL           reduce using rule 4 (statement_list -> statement .)
    SOL_PARANTEZ    reduce using rule 4 (statement_list -> statement .)
    TAMSAYI         reduce using rule 4 (statement_list -> statement .)
    ONDALIKLI       reduce using rule 4 (statement_list -> statement .)
    DOGRU           reduce using rule 4 (statement_list -> statement .)
    YANLIS          reduce using rule 4 (statement_list -> statement .)
    STRING          reduce using rule 4 (statement_list -> statement .)
    $end            reduce using rule 4 (statement_list -> statement .)
    SAG_SUSLU_PARANTEZ reduce using rule 4 (statement_list -> statement .)


state 5

    (5) statement -> var_decl .

    TIP_VOID        reduce using rule 5 (statement -> var_decl .)
    IF              reduce using rule 5 (statement -> var_decl .)
    WHILE           reduce using rule 5 (statement -> var_decl .)
    FOR             reduce using rule 5 (statement -> var_decl .)
    RETURN          reduce using rule 5 (statement -> var_decl .)
    SOL_SUSLU_PARANTEZ reduce using rule 5 (statement -> var_decl .)
    TIP_INT         reduce using rule 5 (statement -> var_decl .)
    TIP_FLOAT       reduce using rule 5 (statement -> var_decl .)
    TIP_BOOL        reduce using rule 5 (statement -> var_decl .)
    TIP_STRING      reduce using rule 5 (statement -> var_decl .)
    TANIMLAYICI     reduce using rule 5 (statement -> var_decl .)
    CIKAR           reduce using rule 5 (statement -> var_decl .)
    DEGIL           reduce using rule 5 (statement -> var_decl .)
    SOL_PARANTEZ    reduce using rule 5 (statement -> var_decl .)
    TAMSAYI         reduce using rule 5 (statement -> var_decl .)
    ONDALIKLI       reduce using rule 5 (statement -> var_decl .)
    DOGRU           reduce using rule 5 (statement -> var_decl .)
    YANLIS          reduce using rule 5 (statement -> var_decl .)
    STRING          reduce using rule 5 (statement -> var_decl .)
    $end            reduce using rule 5 (statement -> var_decl .)
    SAG_SUSLU_PARANTEZ reduce using rule 5 (statement -> var_decl .)


state 6

    (6) statement -> func_decl .

    TIP_VOID        reduce using rule 6 (statement -> func_decl .)
    IF              reduce using rule 6 (statement -> func_decl .)
    WHILE           reduce using rule 6 (statement -> func_decl .)
    FOR             reduce using rule 6 (statement -> func_decl .)
    RETURN          reduce using rule 6 (statement -> func_decl .)
    SOL_SUSLU_PARANTEZ reduce using rule 6 (statement -> func_decl .)
    TIP_INT         reduce using rule 6 (statement -> func_decl .)
    TIP_FLOAT       reduce using rule 6 (statement -> func_decl .)
    TIP_BOOL        reduce using rule 6 (statement -> func_decl .)
    TIP_STRING      reduce using rule 6 (statement -> func_decl .)
    TANIMLAYICI     reduce using rule 6 (statement -> func_decl .)
    CIKAR           reduce using rule 6 (statement -> func_decl .)
    DEGIL           reduce using rule 6 (statement -> func_decl .)
    SOL_PARANTEZ    reduce using rule 6 (statement -> func_decl .)
    TAMSAYI         reduce using rule 6 (statement -> func_decl .)
    ONDALIKLI       reduce using rule 6 (statement -> func_decl .)
    DOGRU           reduce using rule 6 (statement -> func_decl .)
    YANLIS          reduce using rule 6 (statement -> func_decl .)
    STRING          reduce using rule 6 (statement -> func_decl .)
    $end            reduce using rule 6 (statement -> func_decl .)
    SAG_SUSLU_PARANTEZ reduce using rule 6 (statement -> func_decl .)


state 7

    (7) statement -> assignment_stmt .

    TIP_VOID        reduce using rule 7 (statement -> assignment_stmt .)
    IF              reduce using rule 7 (statement -> assignment_stmt .)
    WHILE           reduce using rule 7 (statement -> assignment_stmt .)
    FOR             reduce using rule 7 (statement -> assignment_stmt .)
    RETURN          reduce using rule 7 (statement -> assignment_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 7 (statement -> assignment_stmt .)
    TIP_INT         reduce using rule 7 (statement -> assignment_stmt .)
    TIP_FLOAT       reduce using rule 7 (statement -> assignment_stmt .)
    TIP_BOOL        reduce using rule 7 (statement -> assignment_stmt .)
    TIP_STRING      reduce using rule 7 (statement -> assignment_stmt .)
    TANIMLAYICI     reduce using rule 7 (statement -> assignment_stmt .)
    CIKAR           reduce using rule 7 (statement -> assignment_stmt .)
    DEGIL           reduce using rule 7 (statement -> assignment_stmt .)
    SOL_PARANTEZ    reduce using rule 7 (statement -> assignment_stmt .)
    TAMSAYI         reduce using rule 7 (statement -> assignment_stmt .)
    ONDALIKLI       reduce using rule 7 (statement -> assignment_stmt .)
    DOGRU           reduce using rule 7 (statement -> assignment_stmt .)
    YANLIS          reduce using rule 7 (statement -> assignment_stmt .)
    STRING          reduce using rule 7 (statement -> assignment_stmt .)
    $end            reduce using rule 7 (statement -> assignment_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 7 (statement -> assignment_stmt .)


state 8

    (8) statement -> if_stmt .

    TIP_VOID        reduce using rule 8 (statement -> if_stmt .)
    IF              reduce using rule 8 (statement -> if_stmt .)
    WHILE           reduce using rule 8 (statement -> if_stmt .)
    FOR             reduce using rule 8 (statement -> if_stmt .)
    RETURN          reduce using rule 8 (statement -> if_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 8 (statement -> if_stmt .)
    TIP_INT         reduce using rule 8 (statement -> if_stmt .)
    TIP_FLOAT       reduce using rule 8 (statement -> if_stmt .)
    TIP_BOOL        reduce using rule 8 (statement -> if_stmt .)
    TIP_STRING      reduce using rule 8 (statement -> if_stmt .)
    TANIMLAYICI     reduce using rule 8 (statement -> if_stmt .)
    CIKAR           reduce using rule 8 (statement -> if_stmt .)
    DEGIL           reduce using rule 8 (statement -> if_stmt .)
    SOL_PARANTEZ    reduce using rule 8 (statement -> if_stmt .)
    TAMSAYI         reduce using rule 8 (statement -> if_stmt .)
    ONDALIKLI       reduce using rule 8 (statement -> if_stmt .)
    DOGRU           reduce using rule 8 (statement -> if_stmt .)
    YANLIS          reduce using rule 8 (statement -> if_stmt .)
    STRING          reduce using rule 8 (statement -> if_stmt .)
    $end            reduce using rule 8 (statement -> if_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 8 (statement -> if_stmt .)


state 9

    (9) statement -> while_stmt .

    TIP_VOID        reduce using rule 9 (statement -> while_stmt .)
    IF              reduce using rule 9 (statement -> while_stmt .)
    WHILE           reduce using rule 9 (statement -> while_stmt .)
    FOR             reduce using rule 9 (statement -> while_stmt .)
    RETURN          reduce using rule 9 (statement -> while_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 9 (statement -> while_stmt .)
    TIP_INT         reduce using rule 9 (statement -> while_stmt .)
    TIP_FLOAT       reduce using rule 9 (statement -> while_stmt .)
    TIP_BOOL        reduce using rule 9 (statement -> while_stmt .)
    TIP_STRING      reduce using rule 9 (statement -> while_stmt .)
    TANIMLAYICI     reduce using rule 9 (statement -> while_stmt .)
    CIKAR           reduce using rule 9 (statement -> while_stmt .)
    DEGIL           reduce using rule 9 (statement -> while_stmt .)
    SOL_PARANTEZ    reduce using rule 9 (statement -> while_stmt .)
    TAMSAYI         reduce using rule 9 (statement -> while_stmt .)
    ONDALIKLI       reduce using rule 9 (statement -> while_stmt .)
    DOGRU           reduce using rule 9 (statement -> while_stmt .)
    YANLIS          reduce using rule 9 (statement -> while_stmt .)
    STRING          reduce using rule 9 (statement -> while_stmt .)
    $end            reduce using rule 9 (statement -> while_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 9 (statement -> while_stmt .)


state 10

    (10) statement -> for_stmt .

    TIP_VOID        reduce using rule 10 (statement -> for_stmt .)
    IF              reduce using rule 10 (statement -> for_stmt .)
    WHILE           reduce using rule 10 (statement -> for_stmt .)
    FOR             reduce using rule 10 (statement -> for_stmt .)
    RETURN          reduce using rule 10 (statement -> for_stmt .)
    SOL_SUSLU_PARANTEZ reduce using rule 10 (statement -> for_stmt .)
    TIP_INT         reduce using rule 10 (statement -> for_stmt .)
    TIP_FLOAT       reduce using rule 10 (statement -> for_stmt .)
    TIP_BOOL        reduce using rule 10 (statement -> for_stmt .)
    TIP_STRING      reduce using rule 10 (statement -> for_stmt .)
    TANIMLAYICI     reduce using rule 10 (statement -> for_stmt .)
    CIKAR           reduce using rule 10 (statement -> for_stmt .)
    DEGIL           reduce using rule 10 (statement -> for_stmt .)
    SOL_PARANTEZ    reduce using rule 10 (statement -> for_stmt .)
    TAMSAYI         reduce using rule 10 (statement -> for_stmt .)
    ONDALIKLI       reduce using rule 10 (statement -> for_stmt .)
    DOGRU           reduce using rule 10 (statement -> for_stmt .)
    YANLIS          reduce using rule 10 (statement -> for_stmt .)
    STRING          reduce using rule 10 (statement -> for_stmt .)
    $end            reduce using rule 10 (statement -> for_stmt .)
    SAG_SUSLU_PARANTEZ reduce using rule 10 (statement -> for_stmt .)


state 11

    (11) statement -> return_stmt .
